--- a/src/1장/31p-정규화.md
+++ b/src/1장/31p-정규화.md
@@ -6,7 +6,7 @@
 
 ## 추가로 알게된 점
 
-설계시 프로젝트의 규모에 따라 정규화를 미리 하지 않고 `정규화를 미리 하지 않는다`. 또한 기본키를 제외한 `index key`도 미리 설정하지 않는것을 권장합니다.
+설계시 프로젝트의 규모에 따라 `정규화를 미리 하지 않는다`. 또한 기본키를 제외한 `index key`도 미리 설정하지 않는것을 권장합니다.
 
 추 후 `Production` 환경에 배포된 후 고도화 작업을 할때 `쿼리 실행 계획`을 살피며, 자주 사용되는 키를 index key로 잡고, 정규화를 진행 합니다.
 
